# aibom-scanner

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: sample-output.json
src/aibom_scanner/: __init__.py  __main__.py  cli.py  control_mapper.py  models.py  risk_engine.py  scanner.py
src/aibom_scanner/detectors/: ai_sdk.py  dev_tools.py  secrets.py
src/aibom_scanner/formatters/: json_fmt.py  sarif_fmt.py  table_fmt.py
tests/: conftest.py  test_ai_sdk_detector.py  test_cli.py  test_risk_engine.py  test_scanner.py
