[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aibom-scanner"
version = "1.0.0"
description = "Scan codebases for AI SDK usage and map compliance risks to NIST AI RMF, ISO 42001, and EU AI Act"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{name = "Mike Carroll", email = "mike@saferstrategy.com"}]
keywords = ["ai", "compliance", "sbom", "aibom", "risk", "nist", "iso42001", "eu-ai-act", "security", "governance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.scripts]
aibom-scanner = "aibom_scanner.cli:main"

[project.urls]
Homepage = "https://github.com/saasvista/aibom-scanner"
Documentation = "https://github.com/saasvista/aibom-scanner#readme"
Issues = "https://github.com/saasvista/aibom-scanner/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/aibom_scanner"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"
